@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Term-Clui
-version:      1.37
+version:      1.38
 version_from: Clui.pm
 installdirs:  site
 requires:
